--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  padding: 70px;
+  padding: 70px 10px;
 }
 
 .footer p {
