--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,29 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
 h2, h3 {
   color: #0b3658
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.button {
+  background-color: #0b3658;
+  color: white;
+  font-weight: bold;
+  border-radius: 4px;
+  border: 1px solid #707070;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  margin-top: 10px;
+  padding: 12px;
+  width: 260px;
+}
+
+.button:hover {
+  transform: scale(1.02);
 }
