--- a/src/components/ProductSection/ProductSection.css
+++ b/src/components/ProductSection/ProductSection.css
@@ -4,7 +4,7 @@
 }
 
 .title {
-  padding: 35px 0;
+  padding: 30px 0;
 }
 
 .container {
@@ -17,8 +17,24 @@
   margin-bottom: 20px;
 }
 
+.filters {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0 30px 10px;
+}
+
+.select {
+  margin-left: 10px;
+}
+
 @media only screen and (max-width: 600px) {
   .product-section {
     padding: 10px;
+  }
+
+  .filters {
+    justify-content: center;
+    padding: 0;
   }
 }
