--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   text-align: center;
   background-color: #273c4d;
   color: white;
-  padding: 50px 10px;
+  padding: 40px 10px;
 }
 
 .header p {
@@ -12,4 +12,11 @@
 
 .details {
   font-size: 14px;
+}
+
+@media only screen and (max-width: 600px) {
+  .header {
+    padding: 25px 10px;
+    font-size: 20px;
+  }
 }
