--- a/src/components/ProductSection/ProductSection.css
+++ b/src/components/ProductSection/ProductSection.css
@@ -34,7 +34,10 @@
   }
 
   .filters {
-    justify-content: center;
-    padding: 0;
+    padding: 0 10px 5px;
+  }
+
+  .select {
+    padding: 8px 5px;
   }
 }
