--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,4 +1,25 @@
-.loader-container {
-  padding: 40px;
-  color: lightslategrey
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  margin-top: 40px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #3f698b96;
+  border-color: #3f698b96 transparent #3f698b96 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
