change cta color

--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -27,7 +27,7 @@
 }
 
 .card:hover .button{
-  background-color: #0b3658;
+  background-color: #088111;
   color: white;
   font-weight: bold;
   transform: scale(1.01);
